--- a/form.html
+++ b/form.html
@@ -9,11 +9,15 @@
     <form action="#">
       <label for="user-name">Name :</label>
       <input type="text" id="user-name" />
-<br>
+      <br />
       <label for="user-email">Email :</label>
-      <input type="email" id="user-email">
-<br>
-<label for="user-password"></label>
+      <input type="email" id="user-email" />
+      <br />
+      <label for="user-password"></label>
+      <input type="password" id="user-password" />
+      <br /><br />
+      <label for="user-saport"></label>
+      <textarea name="prgss" id="user-saport"></textarea>
     </form>
   </body>
 </html>
