update in input is checkbox

--- a/form.html
+++ b/form.html
@@ -21,10 +21,17 @@
 
       <br /><br /><br /><br />
 
-      <input type="radio" name="radio01" />Javascript
-      <input type="radio" name="radio01" />Java
-      <input type="radio" name="radio01" />php
-      <input type="radio" name="radio01" />Python
+      <input type="radio" name="radio01" value="javascript" />Javascript
+      <input type="radio" name="radio01" value="java" />Java
+      <input type="radio" name="radio01" value="php" checked />php
+      <input type="radio" name="radio01" value="python" />Python
+
+      <br /><br /><br /><br />
+
+      <input type="checkbox" name="checkbox01" value="javascript" />Javascript
+      <input type="checkbox" name="checkbox01" value="java" />Java
+      <input type="checkbox" name="checkbox01" value="php" checked />php
+      <input type="checkbox" name="checkbox01" value="python" />Python
     </form>
   </body>
 </html>
