update in the form
update in the form is select option in the form is text

--- a/form.html
+++ b/form.html
@@ -8,12 +8,16 @@
   <body>
     <form action="#">
       <label for="user-name">Name :</label>
-      <input type="text" id="user-name" />
+      <input type="text" id="user-name" value="Matin" />
       <br />
       <label for="user-email">Email :</label>
-      <input type="email" id="user-email" />
+      <input
+        type="email"
+        id="user-email"
+        placeholder="matinhasanpour@gmail.com"
+      />
       <br />
-      <label for="user-password"></label>
+      <label for="user-password">Password :</label>
       <input type="password" id="user-password" />
       <br /><br />
       <label for="user-saport"></label>
@@ -32,6 +36,15 @@
       <input type="checkbox" name="checkbox01" value="java" />Java
       <input type="checkbox" name="checkbox01" value="php" checked />php
       <input type="checkbox" name="checkbox01" value="python" />Python
+
+      <br /><br /><br /><br />
+
+      <select name="" id="">
+        <option value="java">java</option>
+        <option value="javascript">javascript</option>
+        <option value="php">php</option>
+        <option disabled value="python">python</option>
+      </select>
     </form>
   </body>
 </html>
