--- a/form.html
+++ b/form.html
@@ -44,6 +44,7 @@
         <option value="javascript">javascript</option>
         <option value="php">php</option>
         <option disabled value="python">python</option>
+        <option disabled value="go">Go</option>
       </select>
     </form>
   </body>
