add update for add font family is YEKAN font

--- a/index.html
+++ b/index.html
@@ -3,26 +3,36 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+
+    <link rel="stylesheet" href="./style.css" />
     <title>Document</title>
   </head>
   <body>
-    <h1>Matin</h1>
+    <div>
+      <h1>Lorem, ipsum</h1>
+      <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolore
+        ea laudantium quibusdam totam explicabo adipisci consectetur eum minus
+        rem!
+      </p>
+    </div>
+    <h1>Lorem, ipsum</h1>
     <p>
-      Lorem ipsum dolor <sup>Lorem, ipsum </sup> sit amet consectetur
-      adipisicing elit. Commodi optio <sub>assumenda</sub> eveniet culpa
-      quibusdam voluptatum <strong>facilis</strong> iste, tempore
-      <em>facere</em> praesentium?
+      اگر شما یک طراح هستین و یا با طراحی های گرافیکی سروکار دارید به متن های
+      برخورده اید که با نام لورم ایپسوم شناخته می‌شوند. لورم ایپسوم یا طرح‌نما
+      (به انگلیسی: Lorem ipsum) متنی ساختگی و بدون معنی است که برای امتحان فونت
+      و یا پر کردن فضا در یک طراحی گرافیکی و یا صنعت چاپ استفاده میشود. طراحان
+      وب و گرافیک از این متن برای پرکردن صفحه و ارائه شکل کلی طرح استفاده
+      می‌کنند.
     </p>
-    <audio controls>
-      <source
-        src="./Amir20Tataloo20-20Man20Bahat20Ghahram205B3205D.mp3"
-        type="audio/mpeg "
-      />
-    </audio>
     <p>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Autem eos error,
-      doloremque quam non saepe sapiente! Fugit veritatis aliquid dignissimos
-      optio inventore. Consectetur, qui tempore soluta quasi modi quos nobis!
+      اگر شما یک طراح هستین و یا با طراحی های گرافیکی سروکار دارید به متن های
+      برخورده اید که با نام لورم ایپسوم شناخته می‌شوند. لورم ایپسوم یا طرح‌نما
+      (به انگلیسی: Lorem ipsum) متنی ساختگی و بدون معنی است که برای امتحان فونت
+      و یا پر کردن فضا در یک طراحی گرافیکی و یا صنعت چاپ استفاده میشود. طراحان
+      وب و گرافیک از این متن برای پرکردن صفحه و ارائه شکل کلی طرح استفاده
+      می‌کنند.
     </p>
+    <span>save to update branch</span>
   </body>
 </html>
