--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <title>Document</title>
   </head>
   <body>
+    <h1 class="navbar">Lorem ipsum</h1>
     <div>
-      <h1>Lorem, ipsum</h1>
       <p>
         Lorem, ipsum dolor sit amet consectetur adipisicing elit. Aliquid dolore
         ea laudantium quibusdam totam explicabo adipisci consectetur eum minus
@@ -17,28 +17,128 @@
       </p>
     </div>
     <h1>Lorem, ipsum</h1>
+    <div>
+      <p class="lorem-one">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum commodi
+        debitis at deserunt facilis ducimus perspiciatis recusandae sit ratione
+        quod.
+      </p>
+      <p class="lorem-tow">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Cum debitis at
+        deserunt facilis ducimus perspiciatis recusandae s quod.
+      </p>
+    </div>
     <p>
-      اگر شما یک طراح هستین و یا با طراحی های گرافیکی سروکار دارید به متن های
-      برخورده اید که با نام لورم ایپسوم شناخته می‌شوند. لورم ایپسوم یا طرح‌نما
-      (به انگلیسی: Lorem ipsum) متنی ساختگی و بدون معنی است که برای امتحان فونت
-      و یا پر کردن فضا در یک طراحی گرافیکی و یا صنعت چاپ استفاده میشود. طراحان
-      وب و گرافیک از این متن برای پرکردن صفحه و ارائه شکل کلی طرح استفاده
-      می‌کنند.
+      Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis
+      repellendus, delectus quasi fuga libero ipsa cupiditate odio doloribus,
+      dolores dolor cum quam fugiat doloremque ut consectetur consequuntur
+      laborum deserunt error exercitationem placeat rem atque et, voluptate
+      modi? Rem in enim voluptate ratione delectus, adipisci dolorem ad aliquid
+      quos qui aliquam veniam neque quasi. Cum illo minus ex veniam error
+      possimus quisquam quibusdam excepturi harum totam nobis expedita saepe
+      asperiores reiciendis beatae, ipsum quia necessitatibus aliquam provident
+      iusto ratione maiores repellat. Dignissimos iste cumque molestiae itaque
+      beatae aut sit esse quaerat ducimus similique provident harum debitis
+      aliquid commodi consectetur ab, quos qui consequatur eos incidunt officia
+      deleniti dolores nobis sint! Tempore sapiente eaque ratione, fugiat
+      quaerat assumenda cumque ipsa? Ea, libero quaerat. Eligendi, totam ipsa
+      cumque doloremque velit pariatur dicta recusandae qui expedita, itaque
+      quia illo. Omnis, dolorum in quae maxime nemo hic! Quisquam consequuntur
+      non eum sapiente asperiores, sint itaque. Eum magni laboriosam veniam
+      tempore natus animi amet quisquam doloremque pariatur commodi odit
+      mollitia autem aliquid sint repudiandae unde minima, eius maiores
+      consectetur. Quod dignissimos veritatis facere illum laudantium neque
+      voluptatibus error sunt, doloremque id ipsum sint debitis mollitia ratione
+      quaerat nesciunt qui modi adipisci, ipsa illo temporibus possimus ullam
+      optio iure. Distinctio sed quasi odio dicta dignissimos eos tempore
+      exercitationem voluptate ipsum in dolorum facere est perferendis officiis
+      ducimus placeat molestias, doloremque qui blanditiis dolores dolor
+      corporis impedit quo. Autem, tempora dolorem ratione enim dolor sunt ut
+      deserunt optio maiores debitis amet, suscipit distinctio accusantium rerum
+      ea in? Molestias, vel similique? Repellendus quam ullam voluptate cum illo
+      labore minus deleniti quo ducimus accusantium similique laudantium beatae
+      blanditiis reiciendis nisi magni eum sint officia cupiditate animi, sequi
+      obcaecati non nemo veritatis. Corporis ex magnam officiis quidem
+      voluptate! Est, ullam? Fugiat, eos reprehenderit. Incidunt consectetur
+      voluptatibus cupiditate quod fugit in ipsa iste, necessitatibus voluptatum
+      optio expedita modi, dolor, labore fugiat doloremque nemo atque aut sit!
+      Perferendis dolorum nulla blanditiis amet voluptatem, quisquam
+      reprehenderit molestiae similique? A cupiditate beatae, explicabo
+      temporibus debitis assumenda veniam magni maxime eum rem cum sint nisi
+      amet adipisci nam aperiam, culpa ab eveniet facilis unde laboriosam autem
+      iste eos distinctio! Pariatur cum sint veritatis quisquam ea! Saepe in
+      quas enim et debitis, rem alias adipisci ab assumenda labore ullam
+      accusamus pariatur nesciunt incidunt architecto iure omnis, suscipit optio
+      distinctio. Fuga dolorem cum libero pariatur nobis nihil quia distinctio,
+      sed, soluta repudiandae corrupti id possimus quos. Qui pariatur et quo!
+      Nulla earum, suscipit consequuntur maiores dolores deleniti totam sunt
+      repellendus ratione eius natus delectus eaque veniam numquam, nesciunt
+      temporibus ad quos a voluptatibus. Vitae architecto exercitationem
+      corporis tenetur distinctio enim tempora sint delectus. Ea maiores, fugiat
+      porro quia minus quibusdam? Nulla voluptate enim unde in eveniet tempore
+      minus nobis vel ratione praesentium, facilis earum, iure ducimus dolor
+      sequi quo eligendi officiis fugiat expedita? Iusto enim molestiae
+      perspiciatis blanditiis eius harum nesciunt? Magnam laboriosam,
+      accusantium consequuntur atque asperiores sed veritatis laborum voluptatum
+      perferendis incidunt alias a dolorum aliquid iste, cumque culpa rerum
+      explicabo! Illum atque sed officiis impedit dolorem architecto debitis
+      possimus illo earum natus magnam iusto id nihil neque tempora ullam et
+      quaerat veniam est, omnis inventore. Dolorem, veritatis sequi! Animi
+      voluptatibus doloremque alias cum. Quasi accusantium harum asperiores
+      aperiam nesciunt eligendi facilis nulla. Magni suscipit quod dolores
+      quibusdam sint deserunt nesciunt saepe impedit beatae blanditiis iure hic
+      odit itaque accusamus, minima eligendi possimus temporibus eum magnam amet
+      rerum, officiis dolore error voluptatum? Sit obcaecati pariatur nostrum
+      mollitia corrupti corporis soluta itaque commodi nesciunt laboriosam,
+      magnam quia enim magni, a distinctio consequuntur doloribus! Odio, tempore
+      odit repellendus libero cupiditate voluptatem assumenda aliquid vero
+      soluta tempora ad quae facilis ea iste. Quis labore doloribus doloremque
+      reiciendis repudiandae debitis neque veniam! Et eligendi eveniet non
+      laborum, totam, ratione minima nulla quam molestiae, nobis reiciendis
+      quis? Temporibus atque, nobis officiis, tenetur asperiores eveniet iure
+      adipisci cum nostrum, voluptatum facilis ut quaerat! Sequi voluptatibus
+      dolorem ab enim porro minima, inventore, veritatis corporis cumque
+      reprehenderit omnis iste quae deleniti id? Molestiae, laudantium assumenda
+      consectetur quo expedita eos repudiandae enim eveniet doloribus, dolorum
+      iusto voluptatibus et facere laboriosam labore iure sed. Deserunt cumque,
+      error voluptates, aliquid inventore repudiandae maiores, nesciunt
+      reprehenderit ab voluptatum eos! Natus atque excepturi magnam ipsam
+      repudiandae fuga molestias assumenda tempore eum porro quasi, cupiditate
+      itaque est dolore! Ea vitae maxime porro nobis optio id consectetur
+      numquam nostrum dolorum tenetur distinctio esse cum accusamus sunt
+      mollitia, repellendus in labore? Aut sunt labore quos earum animi
+      accusantium temporibus. Accusamus sequi perspiciatis maiores dolores
+      assumenda distinctio, possimus atque repudiandae asperiores non quasi ea
+      dolore eum eaque, doloribus iusto debitis doloremque dicta consequatur!
+      Qui consectetur odit doloribus aliquam officiis quos explicabo, accusamus,
+      nesciunt natus, sint provident illo iure assumenda cupiditate consequatur
+      minus voluptatem. Corporis reprehenderit corrupti necessitatibus! Velit
+      autem omnis nihil eius ab amet facilis dolore voluptates modi consectetur
+      corporis deserunt quia veritatis accusantium facere earum deleniti
+      nesciunt numquam, recusandae accusamus tenetur asperiores impedit? Eos quo
+      optio deserunt cumque perferendis ratione ipsum, pariatur enim? Maxime
+      doloremque voluptates culpa autem consectetur nisi, provident illo dolorum
+      cupiditate adipisci quas, perspiciatis tempore soluta consequuntur, sunt
+      quos exercitationem repellat veritatis totam minima sit. Aliquam, earum.
+      Fugit inventore laudantium error corrupti harum a enim similique, atque ut
+      praesentium voluptatem molestias accusamus! Ullam, veniam! Atque eius
+      quisquam vero! Cupiditate vero dolorem alias quibusdam itaque. Corporis,
+      ipsam architecto! Dolorum, atque magni adipisci, a dolorem doloribus quos
+      similique expedita molestiae aspernatur architecto quibusdam, nihil quidem
+      cupiditate libero optio voluptatum nobis nisi nam autem quam rem.
+      Molestias et sunt ipsam nisi illum fuga ea deleniti, provident numquam
+      dicta expedita repellat tempora, maxime labore reprehenderit accusantium
+      alias? Explicabo quam ducimus alias delectus autem dignissimos error,
+      incidunt atque vel ea earum? Eos, quae nam fugit esse ex reiciendis
+      maiores excepturi ut mollitia? Voluptatum repellat ad placeat, in cumque
+      excepturi hic odit, blanditiis eligendi ut dolorem. Quae eius eligendi
+      laboriosam quos rem. Necessitatibus nemo corrupti ducimus temporibus
+      facere nostrum aspernatur, alias asperiores minima, deleniti doloribus
+      provident officiis tenetur deserunt consequatur, rerum praesentium quis
+      eveniet autem iste illo! Officiis necessitatibus eligendi, doloremque sint
+      autem nihil quibusdam voluptatem.
     </p>
-    <p>
-      اگر شما یک طراح هستین و یا با طراحی های گرافیکی سروکار دارید به متن های
-      برخورده اید که با نام لورم ایپسوم شناخته می‌شوند. لورم ایپسوم یا طرح‌نما
-      (به انگلیسی: Lorem ipsum) متنی ساختگی و بدون معنی است که برای امتحان فونت
-      و یا پر کردن فضا در یک طراحی گرافیکی و یا صنعت چاپ استفاده میشود. طراحان
-      وب و گرافیک از این متن برای پرکردن صفحه و ارائه شکل کلی طرح استفاده
-      می‌کنند.
-    </p>
-    <span>save to update branch</span>
-    <span>
-      Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tenetur aliquid,
-      quibusdam deleniti provident reiciendis sint porro unde reprehenderit odit
-      perspiciatis consequuntur odio voluptatibus magnam laudantium delectus
-      facilis placeat exercitationem blanditiis.
-    </span>
+
+    <h2 class="navbar-bottom">save to update branch</h2>
   </body>
 </html>
